--- a/GymManagementPL/appsettings.Development.json
+++ b/GymManagementPL/appsettings.Development.json
@@ -6,6 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=DESKTOP-5EA9HJU ; Database=GymManagment ; Trusted_Connection=True;TrustServerCertificate=True ;"
+    "DefaultConnection": "Server=db38722.public.databaseasp.net; Database=db38722; User Id=db38722; Password=t=8H-9LdW_w5; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True; "
   }
 }
+
+
+//    "DefaultConnection": "Server=DESKTOP-5EA9HJU ; Database=GymManagment ; Trusted_Connection=True;TrustServerCertificate=True ;"
+
+//Server=db38722.public.databaseasp.net; Database=db38722; User Id=db38722; Password=t=8H-9LdW_w5; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True; 
