--- a/GymManagementPL/appsettings.json
+++ b/GymManagementPL/appsettings.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=db38722.public.databaseasp.net; Database=db38722; User Id=db38722; Password=t=8H-9LdW_w5; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True; "
     }
   },
   "AllowedHosts": "*"
